MtdrSpring/k8s/frontend-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: p7frontend-service
  namespace: p7-frontend
  annotations:
    oci.oraclecloud.com/loadbalancer-policy: "IP_HASH"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local

  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: p7frontend
---
# this is new stuff for hosting on the load balancer
apiVersion: v1
kind: Service
metadata:
  name: p7frontend-router
  namespace: p7-frontend
spec:
  selector:
    app: p7frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p7frontend-deployment
  namespace: p7-frontend
spec:
  selector:
    matchLabels:
      app: p7frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: p7frontend
        version: v1
    spec:
      imagePullSecrets:
        - name: oci-registry-secret
      containers:
        - name: p7frontend
          image: mx-queretaro-1.ocir.io/axdispqrsjop/equipo52/yv0fi/p7frontend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
      restartPolicy: Always
